在 Tomcat/TomEE 环境，编写一个 Servlet 程序，通过 JNDI 获 取 JDBC DataSource，能够获取到正常的 java.sql.Connection 对象即可，输出“获取 JDBC 连接成功”等。

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>pre-01week</module>
+        <module>pre-02ioc</module>
     </modules>
 
     <properties>
