--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>pre-03tomcat</module>
         <module>pre-04-url-pattern</module>
         <module>01-tags-support</module>
+        <module>02-configuration</module>
     </modules>
 
     <properties>
