polish code and prepare docs

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>06-config-sources</module>
         <module>07-validation</module>
         <module>08-reactive</module>
+        <module>09-distributed-event</module>
     </modules>
 
     <properties>
