--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>10-dubbo-filter</module>
         <module>11-spring-boot-starter</module>
         <module>12-nacos</module>
+        <module>sc-sm-shop</module>
     </modules>
 
     <properties>
@@ -77,6 +78,10 @@
 
         <!-- Spring 依赖版本 -->
         <spring-boot.version>2.4.5</spring-boot.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
+
+        <!-- Zipkin Spring Cloud Starter -->
+        <spring.cloud.zipkin.version>2.2.8.RELEASE</spring.cloud.zipkin.version>
 
         <!-- Testing 版本 -->
         <junit.version>4.13</junit.version>
@@ -112,6 +117,14 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Spring Cloud Alibaba Dependencies -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
@@ -120,6 +133,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-zipkin -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-zipkin</artifactId>
+                <version>${spring.cloud.zipkin.version}</version>
+            </dependency>
+
 
             <!-- Servlet 3.1 API -->
             <dependency>
